--- a/.github/workflows/exam-pipeline.yml
+++ b/.github/workflows/exam-pipeline.yml
@@ -22,4 +22,14 @@ jobs:
       - name: Run unit tests
         run: npm run test:unit
       - name: Display SoftUni's username
-        run: echo 'zhenie'   
+        run: echo 'zhenie' 
+        
+  deploy:
+    runs-on: ubuntu-latest 
+    needs: build   
+    steps:
+      - name: Deploy to production
+        uses: johnbeynon/render-deploy-action@v0.0.8
+        with:
+          service-id: ${{ secrets.RENDER_SERVICE_ID }}
+          api-key: ${{ secrets.RENDER_API_KEY }}	      
