--- a/.github/workflows/exam-pipeline.yml
+++ b/.github/workflows/exam-pipeline.yml
@@ -32,4 +32,24 @@ jobs:
         uses: johnbeynon/render-deploy-action@v0.0.8
         with:
           service-id: ${{ secrets.RENDER_SERVICE_ID }}
-          api-key: ${{ secrets.RENDER_API_KEY }}	      
+          api-key: ${{ secrets.RENDER_API_KEY }}	 
+      - name: Wait some time app to deploy
+        run: sleep 60    
+          
+  test-UI:
+    runs-on: ubuntu-latest 
+    needs: deploy
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Use Node.js 18.x
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18.x
+          cache: 'npm'
+      - name: Install dependencies
+        run: npm install  
+      - name: Install Playwright    
+        run: npx playwright install   
+      - name: Run UI tests  
+        run: npm run test:ui 
